--- a/htdocs/css/master.css
+++ b/htdocs/css/master.css
@@ -842,6 +842,9 @@ footer {
  */
 .ui-dialog {
 	background-color: #fff;
+	-webkit-box-shadow: 3px 3px 7px 1px #666;
+	   -moz-box-shadow: 3px 3px 7px 1px #666;
+	        box-shadow: 3px 3px 7px 1px #666;
 }
 	.ui-dialog .ui-dialog-titlebar {
 		padding:5px 15px;
