--- a/htdocs/static/scss/areas/_title-list.scss
+++ b/htdocs/static/scss/areas/_title-list.scss
@@ -1,20 +1,18 @@
 
 .title-list {
-  li,dd,dt {
+  li {
     list-style: none;
     padding: 5px;
     a {
       text-decoration: none;
     }
-  }
-  li:nth-child(even),
-  .even {
-    background-color: $gray-lighter;
-  }
-  dt {
-    clear: both;
-    display: block;
-    margin-right: 10px;
-    width: 100px;
+    span {
+      float: left;
+      display: block;
+      margin-right: 50px;
+    }
+    &:nth-child(even) {
+      background-color: $gray-lighter;
+    }
   }
 }
