--- a/htdocs/static/scss/areas/_page-law-show.scss
+++ b/htdocs/static/scss/areas/_page-law-show.scss
@@ -1,39 +1,23 @@
-/*
-################################################################################
+/* ################################################################################
 # Law page
 ################################################################################
 */
 
-.law {
+body.law {
+  .nest {
+    max-width: none;
+    padding: 0 40px;
+    width: 100%;
+    @include respond-to(smartphone) {
+      padding: 0;
+    }
+  }
+
   section#main_content {
     overflow: hidden;
-    padding-bottom: 150px; // Footer fixed hack
-
-    @include respond-to(print) {
-      padding-bottom: 0;
-    }
   }
 
-  .nest {
-    @extend .wide;
-
-    @include respond-to(print) {
-      margin: 0 0 0 0.25in;
-      padding: 0;
-      width: 7in;
-    }
-  }
-
-  #main_content header {
-    display: block;
-    padding: 20px;
-
-    @include respond-to(print) {
-      padding: 0;
-    }
-  }
-
-  .primary-content {
+  section.law-detail {
     float: left;
     margin-right: 1%;
     padding: 20px;
@@ -71,67 +55,23 @@
       text-transform: uppercase;
     }
 
-    // This function that follows allows for the indentation up to 9 levels deep
-    // To increase the number of levels, one can add to the @while $num
-    // statement but really, 9 levels of indentation? Go smack the legislator
-    // that wrote that. You can also change your indent depth globally with the
-    // $indent variable.
-    section {
-
-      $num: 1;
-      $indent: 1em;
-
-      &.indent {
-        margin-left: $indent; /* 16px */
-      }
-
-      @while $num < 9 {
-
-        &.indent-#{$num} {
-          margin-left: $num * $indent;
-        } // &-#{num}
-        $num: $num +1;
-      } // @while
-    }
-
     p {
       margin: 0 0 1.25em 0;
     }
 
-    pre.table {
-      margin: 0 0 20px 0;
-      font-size: .75em;
-      overflow-x: scroll;
-      white-space: pre;
-    }
-
   }
 
-  .secondary-content {
+  section.secondary-content {
 
     float: right;
+    font-size: 81.25%;
     padding: 20px;
+    text-align: center;
     width: 44%;
 
     @include respond-to(smartphone) {
       float: none;
       width: 100%;
-    }
-
-    @include respond-to(print) {
-      float: none;
-      padding: 0;
-      width: 100%;
-    }
-
-    ul {
-      list-style: none;
-    }
-
-    .identifier,
-    .title {
-      display: block;
-      margin: 1em 0 0;
     }
 
     .ad {
@@ -147,8 +87,7 @@
 
     }
 
-    .grouping,
-    .related-group {
+    div.grouping {
       float: left;
       margin-right:1%;
       text-align: left;
@@ -166,21 +105,23 @@
 
     }
 
-    .grouping.last {
+    div.grouping.last {
       margin-right: 0;
     }
 
-    .grouping > section,
-    .related-group,
-    .info-box {
+    div.grouping > section,
+    section#legal_self_help {
 
   //    @include opacity(.5); // layer alpha
+      @extend %clearfix;
+      clear: both;
       border: 1px solid #e4e9e7; // stroke
       background-color: #fcfdfa; // layer fill content + color overlay
       box-shadow:inset 0 2px 20px rgba(111,114,117,.15); // inner shadow
       margin-bottom: 1em;
       padding: 0;
       text-align: left;
+      width: 100%;
 
       h1 {
         font-family: $statedecoded-stack3;
@@ -302,49 +243,54 @@
 
       }
 
-    }
-
-    p.keyboard {
-      font-family: $statedecoded-stack3;
-      font-size: 0.9em;
-      text-transform: uppercase;
-
-      a#keyhelp {
-        @include respond-to(print) {
-          display: none;
+      &#cross_references {
+        article.cross-reference {
+          h1 {
+            font-family: $statedecoded-stack2;
+            margin: 1em 0 0 0;
+          }
         }
       }
-    }
 
-    .dark {
-      background-color: #656358;
-      color: #fff;
-      overflow: hidden;
-      text-shadow: 0 -1px 1px rgba(0,0,0,0.4);
-
-      > h1 {
-        float: left;
-        font-size: 24px;
-        font-weight: 100;
-        font-style: normal;
-        margin: 0;
-        padding: 10px;
-        text-transform: uppercase;
-        width: 50%;
-      } // h1
-
-      dl {
-        float: right;
-        margin: 1em 0 0 0;
-        padding: 0;
-        width: 49%;
-
-        dt { font-size: 85%; margin: 0; padding: 0; text-transform: uppercase;}
-        dd { margin: 0 0 1em 0; padding: 0; }
-
+      &#related_laws {
+        article.related-law {
+          h1 {
+            font-family: $statedecoded-stack2;
+            margin: 1em 0 0 0;
+          }
+        }
       }
 
-    } // &#cite_as
+      &#cite_as {
+        background-color: #656358;
+        color: #fff;
+        overflow: hidden;
+        text-shadow: 0 -1px 1px rgba(0,0,0,0.4);
+
+        > h1 {
+          float: left;
+          font-size: 24px;
+          font-weight: 100;
+          font-style: normal;
+          margin: 0;
+          padding: 10px;
+          text-transform: uppercase;
+          width: 50%;
+        } // h1
+
+        dl {
+          float: right;
+          margin: 1em 0 0 0;
+          padding: 0;
+          width: 49%;
+
+          dt { font-size: 85%; margin: 0; padding: 0; text-transform: uppercase;}
+          dd { margin: 0 0 1em 0; padding: 0; }
+
+        }
+
+      } // &#cite_as
+    }
   }
 }
 
