--- a/htdocs/static/scss/areas/_header.scss
+++ b/htdocs/static/scss/areas/_header.scss
@@ -18,7 +18,7 @@
   }
 
   hgroup#virginia_logo {
-    @include background(image-url("faux_seal.png"));
+    @include background-image(image-url("faux_seal.png"));
     background-repeat: no-repeat;
     background-position: top left;
     background-size: auto;
@@ -179,43 +179,43 @@
           }
 
           &#the_code {
-            @include background(image-url("nav-icons/nav_the-code.svg"));
+            @include background-image(image-url("nav-icons/nav_the-code.svg"));
             &:hover {
-              @include background(image-url("nav-icons/nav_the-code-hover.svg"));
+              @include background-image(image-url("nav-icons/nav_the-code-hover.svg"));
             }
             .lt-ie9 & {
-              @include background(image-url("nav-icons/fallbacks/nav_the-code.png"));
+              @include background-image(image-url("nav-icons/fallbacks/nav_the-code.png"));
             }
           } // &#the_code
 
           &#court_cases {
-            @include background(image-url("nav-icons/nav_court-cases.svg"));
+            @include background-image(image-url("nav-icons/nav_court-cases.svg"));
             &:hover {
-              @include background(image-url("nav-icons/nav_court-cases-hover.svg"));
+              @include background-image(image-url("nav-icons/nav_court-cases-hover.svg"));
             }
             .lt-ie9 & {
-              @include background(image-url("nav-icons/fallbacks/nav_court-cases.png"));
+              @include background-image(image-url("nav-icons/fallbacks/nav_court-cases.png"));
             }
           } // &#the_code
 
           &#about_us {
-            @include background(image-url("nav-icons/nav_about-us.svg"));
+            @include background-image(image-url("nav-icons/nav_about-us.svg"));
             //background-size: 50px 50px;
             &:hover {
-              @include background(image-url("nav-icons/nav_about-us-hover.svg"));
+              @include background-image(image-url("nav-icons/nav_about-us-hover.svg"));
             }
             .lt-ie9 & {
-              @include background(image-url("nav-icons/fallbacks/nav_about-us.png"));
+              @include background-image(image-url("nav-icons/fallbacks/nav_about-us.png"));
             }
           } // &#the_code
 
           &#use_the_api {
-            @include background(image-url("nav-icons/nav_use-the-api.svg"));
+            @include background-image(image-url("nav-icons/nav_use-the-api.svg"));
             &:hover {
-              @include background(image-url("nav-icons/nav_use-the-api-hover.svg"));
+              @include background-image(image-url("nav-icons/nav_use-the-api-hover.svg"));
             }
             .lt-ie9 & {
-              @include background(image-url("nav-icons/fallbacks/nav_use-the-api.png"));
+              @include background-image(image-url("nav-icons/fallbacks/nav_use-the-api.png"));
             }
           } // &#the_code
         } // a
