Adding generic rules for DL elements to match ULs and OLs.

--- a/htdocs/static/scss/areas/_title-list.scss
+++ b/htdocs/static/scss/areas/_title-list.scss
@@ -1,6 +1,6 @@
 
 .title-list {
-  li {
+  li,dt,dd {
     list-style: none;
     padding: 5px;
     a {
@@ -11,8 +11,14 @@
       display: block;
       margin-right: 50px;
     }
-    &:nth-child(even) {
-      background-color: $gray-lighter;
-    }
+  }
+  li:nth-child(even),
+  .even {
+    background-color: $gray-lighter;
+  }
+  dt {
+    float: left;
+    display: block;
+    width: 50px;
   }
 }
