Totally rewrote breadcrumbs. The old CSS for breadcrumbs didn't handle multiple-ancestors at all.  I'm using a slightly simpler version which allows for this case.

--- a/htdocs/static/scss/areas/_breadcrumbs.scss
+++ b/htdocs/static/scss/areas/_breadcrumbs.scss
@@ -1,88 +1,72 @@
 // Function Specific Mixins
 // ------------------------------------------------------------------
 
-@mixin wizard-step($bgColor, $shadowTone) {
-  color: $white;
-  text-shadow: 0 1px 0 darken($bgColor, $shadowTone);
-  background-color: $bgColor;
+$top-bottom-width: 12px;
+$side-width: 24px;
 
-  &:before {
-    border-top-color: $bgColor;
-    border-bottom-color: $bgColor;
-  }
-
-  &:after {
-    border-left-color: $bgColor;
-  }
-} // @mixin wizard-step
-
-@mixin wizard-step-group($bgColor) {
-  a {
-    @include wizard-step($bgColor, 15%);
-  }
-
-  &:hover a {
-    @include wizard-step(darken($bgColor, 20%), 20%);
-  }
-} // @mixin wizard-step-group
-
-
-
-section.breadcrumbs {
-  @extend %clearfix;
-  clear: both;
-  margin-bottom: 20px;
-} // section#progress-bar
-
-.steps-nav {
-  clear: both;
-  position: relative;
+.breadcrumbs ul {
+  list-style: none;
   margin: 0;
-  padding: 0;
-  list-style-type: none;
-  width: 100%;
+  overflow: hidden;
+  font: 18px Helvetica, Arial, Sans-Serif;
+  @include clearfix;
   li {
-    padding: 0;
-    position: relative;
     float: left;
     a {
-      position: relative;
-      display: inline-block;
       font-size: 12px;
       height: $base-line-height;
       line-height: $base-line-height;
-      margin-right: 20px;
-      padding: 0 5px;
-      color: $white !important;
-      background-color: $base-lightest;
+      color: $white;
       text-decoration: none;
-      span {
-        font-weight: bold;
-      }
-      &:before, &:after {
+      padding: 0px 0 0px (5+$side-width);
+      background: $base-lightest;
+      position: relative;
+      display: block;
+      float: left;
+      &:before {
+        content: " ";
+        display: block;
         width: 0;
         height: 0;
+        border-top: $top-bottom-width solid transparent;
+        border-bottom: $top-bottom-width solid transparent;
+        border-left: $side-width solid $white;
         position: absolute;
-        content: "";
-        top: 0;
-        border: $base-line-height / 2 solid $base-lightest;
-        border-right-width: 0;
-      }
-      &:before {
-        border-left: $base-line-height solid transparent;
-        left: -$base-line-height;
+        margin-left: 1px;
+        left: 100%;
+        z-index: 1;
       }
       &:after {
-        border-color: transparent;
-        border-left: $base-line-height  solid $base-lightest;
-        right: -$base-line-height;
+        content: " ";
+        display: block;
+        width: 0;
+        height: 0;
+        border-top: $top-bottom-width solid transparent;
+        border-bottom: $top-bottom-width solid transparent;
+        border-left: $side-width solid $base-lightest;
+        position: absolute;
+        top: 0;
+
+        left: 100%;
+        z-index: 2;
       }
-    } // a
-    &:first-child a:before {
-      border-left: none;
+      &:hover {
+        background: darken($base-lightest, 20%);
+      }
+      &:hover:after {
+        border-left-color: darken($base-lightest, 20%);
+      }
     }
-    &.active {
-      @include wizard-step-group($base-darkest);
+    &:first-child a {
+      padding-left: 5px;
     }
-  } // li
-} // .steps-nav
+    &:last-child a {
+      background: $base-darkest;
+      &:after {
+        border-top: $top-bottom-width solid transparent;           /* Go big on the size, and let overflow hide */
+        border-bottom: $top-bottom-width solid transparent;
+        border-left: $side-width solid $base-darkest;
+      }
+    }
+  }
+}
